# fastapi-web-for-simple-enjoyment-server

./: .env.example  README.md  pyproject.toml
app/: main.py
app/common/: config.py  consts.py
app/core/events/: event.py
app/core/settings/: base.py  setting.py
app/database/: conn.py  schema.py
app/models/: common.py  users.py
app/routes/: auth.py  fortune.py  index.py
app/services/: authentication.py  jwt.py
